Display participants in activity cards and update styles for better visibility

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,6 +15,9 @@
     <main>
       <section id="activities-container">
         <h3>Available Activities</h3>
+        <p class="info" style="margin-bottom:12px;">
+          Each activity card shows its participants below the description.
+        </p>
         <div id="activities-list">
           <!-- Activities will be loaded here -->
           <p>Loading activities...</p>
